Fix spacing problems.

--- a/web/themes/patternlab/source/_patterns/01-atoms/buttons/_buttons.scss
+++ b/web/themes/patternlab/source/_patterns/01-atoms/buttons/_buttons.scss
@@ -16,8 +16,13 @@
   @include button();
   &--knockout {
     @include button(transparent, $c-white);
+    padding: 2px;
+    margin-top: 5px;
+    border-width: 1px;
     &:hover {
       @include button($c-white, $c-white, $c-blue, $c-blue);
+      padding: 2px;
+      border-width: 1px;
     }
   }
 }
