--- a/web/themes/patternlab/source/_patterns/03-organisms/views/schedule/_schedule.scss
+++ b/web/themes/patternlab/source/_patterns/03-organisms/views/schedule/_schedule.scss
@@ -4,7 +4,7 @@
     border-top: 4px solid $c-sponsorslist--border;
     text-align: center;
     margin-bottom: -73px;
-    margin-top: $spacing--l*2;
+    margin-top: $spacing--l*5;
   }
 
   &__timeslot {
